Fix for truncated <a> in tables

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -679,6 +679,11 @@ th {
 .table--body > tbody > tr:nth-child(even) {
   background-color: rgba(14, 30, 37, 0.02); }
 
+td > a {
+  display: block;
+  overflow: hidden;
+  text-overflow: ellipsis; }
+
 html {
   color: #444;
   font-family: -apple-system, BlinkMacSystemFont, "Avenir Next", "Avenir", "Segoe UI", "Lucida Grande", "Helvetica Neue", "Helvetica", "Fira Sans", "Roboto", "Noto", "Droid Sans", "Cantarell", "Oxygen", "Ubuntu", "Franklin Gothic Medium", "Century Gothic", "Liberation Sans", sans-serif;
