--- a/assets/scss/base/_tables.scss
+++ b/assets/scss/base/_tables.scss
@@ -26,8 +26,14 @@ th {
 
 td,
 th{
-  padding: 0.5em; 
+  padding: 0.5em;
 }
 .table--body>tbody>tr:nth-child(even){
   background-color: rgba(14,30,37,.02);
+}
+
+td>a{
+  display: block;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
